--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -38,7 +38,7 @@
             <a href="#">Buku</a>
             <a href="#">Koleksi</a>
             <a href="#">Kontak</a>
-            <button class="btnLogin-popup" id="loginButton">Masuk</button>
+            <button class="btnLogin-popup" id="loginButton">Login</button>
             <div class="profile-container" id="profileContainer" style="display: none;">
                 <div class="profile-icon" id="profileIcon">
                     <img src="profile pic.png" alt="Profile Icon">
@@ -51,7 +51,7 @@
                         <i class="fas fa-user"></i> Profil Saya
                     </a>
                     <a href="#" class="dropdown-item">
-                        <i class="fas fa-cog"></i> Pengaturan
+                        <i class="fas fa-cog"></i> Setingan 
                     </a>
                     <a href="#" class="dropdown-item" id="logoutButton">
                         <i class="fas fa-sign-out-alt"></i> Keluar
@@ -93,7 +93,7 @@
 
         <!-- Form Register -->
         <div class="form-box register">
-            <h2>Daftar</h2>
+            <h2>epertinya ada pembaca baru😉</h2>
             <form action="#">
                 <div class="input-box">
                     <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
@@ -113,7 +113,7 @@
                 <div class="remember-forgot">
                     <label><input type="checkbox"> Saya menyetujui syarat & ketentuan</label>
                 </div>
-                <button type="submit" class="btn">Daftar</button>
+                <button type="submit" class="btn">Mendaftar</button>
                 <div class="login-register">
                     <p>Sudah punya akun? <a href="#" class="login-link">Masuk</a></p>
                 </div>
