--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         <!-- Form Register -->
         <div class="form-box register">
-            <h2>epertinya ada pembaca baru😉</h2>
+            <h2>Sepertinya ada pembaca baru😉</h2>
             <form action="#">
                 <div class="input-box">
                     <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
