--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <label><input type="checkbox"> Ingat saya</label>
                     <a href="#" class="forgot-password-link">Lupa sandi?</a>
                 </div>
-                <button type="submit" class="btn">Masuk</button>
+                <button type="submit" class="btn">Login</button>
                 <div class="login-register">
                     <p>Belum punya akun? <a href="#" class="register-link">Daftar</a></p>
                 </div>
