--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
                 </div>
                 <div class="remember-forgot">
                     <label><input type="checkbox"> Saya menyetujui syarat & ketentuan</label>
+                    <br>
+                    <a href="https://daffa-5mb.github.io/Syarat-dan-Ketentuan-perpustakaan/" target="_blank">Baca syarat dan ketentuan</a>
                 </div>
                 <button type="submit" class="btn">Mendaftar</button>
                 <div class="login-register">
