--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <!-- Form Login -->
         <div class="form-box login">
-            <h2>Selamat datang</h2>
+            <h2>Halo ;)</h2>
             <form action="#">
                 <div class="input-box">
                     <span class="icon"><ion-icon name="mail-outline"></ion-icon></span>
@@ -93,7 +93,7 @@
 
         <!-- Form Register -->
         <div class="form-box register">
-            <h2>Sepertinya ada pembaca baru😉</h2>
+            <h2>Selamat datang:)</h2>
             <form action="#">
                 <div class="input-box">
                     <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
